# flightsql-odbc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE-BUNDLE  NOTICE  NOTICE-BUNDLE  README-IOMETE.md  README.md  arrow-odbc_shared.rc  build.bat  build_darwin_arm64.sh  build_win32.bat  build_win64.bat  connection.cc  connection.h  driver.h  main.cc  main.cpp  statement.h  types.h  vcpkg.json
abstraction_layer/: CMakeLists.txt  connection.cc  connection.h  driver.h  exceptions.cc  exceptions.h  types.h
flight_sql/: CMakeLists.txt  FlightConnectionTest.cc  FlightConnectionTest.cpp  FlightSqlConnection.cc  FlightSqlConnection.cpp  FlightSqlConnection.h  FlightSqlDriver.cc  FlightSqlDriver.cpp  FlightSqlDriver.h  address_info.cc  address_info.h  blocking_queue.h  flight_sql_auth_method.cc  flight_sql_auth_method.h  flight_sql_connection.cc  flight_sql_connection.h  flight_sql_connection_test.cc  flight_sql_driver.cc  flight_sql_driver.h  flight_sql_get_tables_reader.cc  flight_sql_get_tables_reader.h  flight_sql_get_type_info_reader.cc  flight_sql_get_type_info_reader.h  flight_sql_result_set.cc  flight_sql_result_set.h  flight_sql_result_set_accessors.cc  flight_sql_result_set_accessors.h  flight_sql_result_set_column.cc  flight_sql_result_set_column.h  flight_sql_result_set_metadata.cc  flight_sql_result_set_metadata.h  flight_sql_ssl_config.cc  flight_sql_ssl_config.h  flight_sql_statement.cc  flight_sql_statement.h  flight_sql_statement_get_columns.cc  flight_sql_statement_get_columns.h  flight_sql_statement_get_columns_v2.cc  flight_sql_statement_get_columns_v2.h  flight_sql_statement_get_columns_v3.cc  (+27 more)
flight_sql/accessors/: binary_array_accessor.cc  binary_array_accessor.h  binary_array_accessor_test.cc  boolean_array_accessor.cc  boolean_array_accessor.h  boolean_array_accessor_test.cc  calendar_utils.cc  calendar_utils.h  common.h  date_array_accessor.cc  date_array_accessor.h  date_array_accessor_test.cc  decimal_array_accessor.cc  decimal_array_accessor.h  decimal_array_accessor_test.cc  double_array_accessor.cc  double_array_accessor.h  float_array_accessor.cc  float_array_accessor.h  int16_array_accessor.cc  int16_array_accessor.h  int32_array_accessor.cc  int32_array_accessor.h  int64_array_accessor.cc  int64_array_accessor.h  int8_array_accessor.cc  int8_array_accessor.h  main.h  primitive_array_accessor.cc  primitive_array_accessor.h  primitive_array_accessor_test.cc  string_array_accessor.cc  string_array_accessor.h  string_array_accessor_test.cc  time_array_accessor.cc  time_array_accessor.h  time_array_accessor_test.cc  timestamp_array_accessor.cc  timestamp_array_accessor.h  timestamp_array_accessor_test.cc  (+9 more)
flight_sql/config/: configuration.cc  configuration.cpp  connection_string_parser.cc  connection_string_parser.cpp  diagnostic_record.cpp  diagnostic_record_storage.cpp  dsn_config.cpp  utility.cpp
flight_sql/include/flight_sql/: flight_sql_driver.h
flight_sql/include/flight_sql/common/: common_types.h
flight_sql/include/flight_sql/config/: configuration.h  connection_string_parser.h  diagnostic_record.h  diagnostic_record_storage.h  dsn_config.h  utility.h
flight_sql/include/flight_sql/ui/: add_property_window.h  custom_window.h  dsn_configuration_window.h  window.h
flight_sql/ui/: add_property_window.cc  custom_window.cc  custom_window.cpp  dsn_configuration_window.cc  dsn_configuration_window.cpp  window.cc  window.cpp
odbc_perf_testing/: README.md  environment.yml  main.py  requirements.txt
odbc_perf_testing/perf_testing/: callable_profiler.py
odbc_perf_testing/test_cases/: test_all_sql_types.py  test_data_types.py  test_fetch_all.py
odbc_perf_testing/test_strategy/: __init__.py  base_strategy.py  executable_strategy.py  execution_details.py  pyodbc_strategy.py  turbodbc_strategy.py
odbcabstraction/: CMakeLists.txt  calendar_utils.cc  connection.cc  diagnostics.cc  encoding.cc  exceptions.cc  logger.cc  odbc_logger.cc  odbc_logger.h  spd_logger.cc  spd_logger.h  utils.cc  whereami.cc
odbcabstraction/include/odbcabstraction/: blocking_queue.h  calendar_utils.h  columnar_result_set.h  connection.h  diagnostics.h  driver.h  encoding.h  error_codes.h  exceptions.h  i_logger.h  logger.h  platform.h  result_set.h  result_set_metadata.h  spd_logger.h  statement.h  types.h  utils.h
odbcabstraction/include/odbcabstraction/odbc_impl/: AttributeUtils.h  EncodingUtils.h  ODBCConnection.h  ODBCDescriptor.h  ODBCEnvironment.h  ODBCHandle.h  ODBCStatement.h  TypeUtilities.h
odbcabstraction/include/odbcabstraction/spi/: connection.h  driver.h  result_set.h  result_set_metadata.h  statement.h
odbcabstraction/odbc_impl/: ODBCConnection.cc  ODBCDescriptor.cc  ODBCEnvironment.cc  ODBCStatement.cc
spi/: CMakeLists.txt  connection.cc  connection.h  driver.h  exceptions.cc  exceptions.h  types.h
